# si-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  tea.yaml
.github/workflows/: publish.yml
.idx/: dev.nix
examples/: async.rs  font.rs  image.rs  macros.rs  main.rs  preset.rs
scripts/: prepare.ts
src/: font.rs  image.rs  lib.rs  macros.rs  preset.rs
