
[package]
name = "si-img"
version = "0.3.2"
edition = "2021"
authors = ["ReGraphic Foundation <rajdeepm.dev+rg@gmail.com"]
repository = "https://github.com/regraphic/si-rs"
description = "A simple and lightweight Rust library to generate Social Media Preview Images"
license = "MIT"

[package.metadata.exclude]
paths = ["examples/*"]

[dependencies]
image = "0.24.7"
rusttype = "0.9.3"

[dependencies.reqwest]
version = "0.11.19"

[dependencies.wasm-bindgen]
version = "0.2.87"

[dependencies.wasm-bindgen-futures]
version = "0.4.37"
optional = true

[lib]
crate-type = ["cdylib","rlib"]

[features]
default = ["blocking","async"]
blocking = ["reqwest/blocking"]
async = ["wasm-bindgen-futures"]

[profile.release]
opt-level = 3
lto = "fat"
