
[package]
name = "si-img"
version = "0.5.0"
edition = "2021"
authors = ["ReGraphic Foundation <rajdeepm.dev+rg@gmail.com"]
repository = "https://github.com/regraphic/si-rs"
description = "A simple and lightweight Rust library to generate Social Media Preview Images"
license = "MIT"

[package.metadata.exclude]
paths = ["examples/*"]

[dependencies.image]
version = "0.24.7"

[dependencies.reqwest]
version = "0.11.23"

[dependencies.wasm-bindgen]
version = "0.2.89"

[dependencies.wasm-bindgen-futures]
version = "0.4.39"
optional = true

[dependencies.ab_glyph]
version = "0.2.23"

[lib]
crate-type = ["cdylib","rlib"]

[features]
default = ["blocking","async"]
blocking = ["reqwest/blocking"]
async = ["wasm-bindgen-futures"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debuginfo = 0
